Java 8 no kotlin